Update index.html, added some tags in head

--- a/index.html
+++ b/index.html
@@ -1,13 +1,82 @@
-<html>
-    <head>
-        <title>CodeVillain's portfolio site</title>
-        <meta charset="utf-8">
-        <meta name="autor" content="CodeVillain">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    </head>
-    <body>
-        <p>
-            우리 모두는 <strong><u>자신의 힘</u></strong>으로 발견한 내용을 가장 쉽게 익힌다. - 도널드 커누스
-        </p>
-    </body>
+<!DOCTYPE html>
+
+<html lang="ko" itemscope itemtype="http://schema.org/WebPage">
+<head prefix="og: http://ogp.me/ns#">
+    <!-- 기본적인 것들 -->
+    <title>CodeVillain의 포트폴리오들</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
+    <meta name="description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
+    <meta name="keywords" content="CodeVillain, Deokwon Kim, Kim Deokwon, 김덕원">
+    <meta name="author" content="CodeVillain">
+
+    <!-- FaceBook -->
+    <meta property="og:image" content="http://">
+	<meta property="og:description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
+	<meta property="og:site_name" content="CodeVillain의 포트폴리오들">
+	<meta property="og:url" content="https://the-codevillain.github.io/portfolio/">
+	<meta property="og:title" content="CodeVillain의 포트폴리오들">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:domain" content="https://the-codevillain.github.io/portfolio/">
+    <meta name="twitter:site" content="@CodeVillain">
+    <meta name="twitter:creator" content="@CodeVillain">
+	<meta name="twitter:title" content="CodeVillain의 포트폴리오들">
+	<meta name="twitter:description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
+	<meta name="twitter:image:src" content="http://">
+
+    <!-- Google -->
+	<meta itemprop="name" content="CodeVillain의 포트폴리오들">
+	<meta itemprop="description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
+	<meta itemprop="image" content="http://">
+
+    <!--Microsoft Tags-->
+    <meta name="msapplication-tap-highlight" content="no">
+	<meta name="msapplication-TileColor" content="">
+	<meta name="application-name" content="CodeVillain의 포트폴리오들">
+	<meta name="msapplication-tooltip" content="CodeVillain의 포트폴리오들">
+	<meta name="msapplication-starturl" content="https://the-codevillain.github.io/portfolio/">
+	<meta name="msapplication-square70x70logo" content="assets/imges/icons/icon_70x70.png">
+	<meta name="msapplication-square150x150logo" content="assets/imges/icons/icon_150x150.png">
+	<meta name="msapplication-wide310x150logo" content="assets/imges/icons/icon_310x150.png">
+    <meta name="msapplication-square310x310logo" content="assets/imges/icons/icon_310x310.png">
+
+    <!-- Android  -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" href="assets/imges/icons/icon-192x192.png" sizes="192x192">
+    <link rel="icon" href="assets/imges/icons/icon-128x128.png" sizes="128x128">
+
+    <!-- iOS -->
+    <meta name="apple-mobile-web-app-title" content="Application Title">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="apple-touch-icon" href="assets/imges/icons/icon_60x60.png">
+	<link rel="apple-touch-icon" href="assets/imges/icons/icon_76x76.png" sizes="76x76">
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/imges/icons/icon_120x120.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/imges/icons/icon_152x152.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/imges/icons/icon_167x167.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/imges/icons/icon_180x180.png">
+
+    <!-- UC Mobile Browser  -->
+    <meta name="full-screen" content="yes">
+    <meta name="browsermode" content="application">
+    <link rel="apple-touch-icon-precomposed" href="assets/imges/icons/icon-52x52.png" sizes="57x57">
+    <link rel="apple-touch-icon" href="assets/imges/icons/icon-72x72.png" sizes="72x72">
+
+    <!-- Etc -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="">
+    <link rel="canonical" href="https://the-codevillain.github.io/portfolio/">
+    <link rel="shortcut icon" href="assets/imges/favicon.ico">
+    <link rel="publisher" href="https://plus.google.com/u/0/116989943152763430078"> 
+
+    <!-- Manifest.json  -->
+    <link href="manifest.json" rel="manifest">
+</head>
+
+<body>
+    <p>우리 모두는 <strong><u>자신의 힘</u></strong>으로 발견한 내용을 가장 쉽게 익힌다. - 도널드 커누스</p>
+</body>
+
 </html>
