--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="CodeVillain">
 
     <!-- FaceBook -->
-    <meta property="og:image" content="http://">
+    <meta property="og:image" content="https://the-codevillain.github.io/portfolio/assets/images/share.png">
 	<meta property="og:description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
 	<meta property="og:site_name" content="CodeVillain의 포트폴리오들">
 	<meta property="og:url" content="https://the-codevillain.github.io/portfolio/">
@@ -24,16 +24,16 @@
     <meta name="twitter:creator" content="@CodeVillain">
 	<meta name="twitter:title" content="CodeVillain의 포트폴리오들">
 	<meta name="twitter:description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
-	<meta name="twitter:image:src" content="http://">
+	<meta name="twitter:image:src" content="https://the-codevillain.github.io/portfolio/assets/images/share.png">
 
     <!-- Google -->
 	<meta itemprop="name" content="CodeVillain의 포트폴리오들">
 	<meta itemprop="description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
-	<meta itemprop="image" content="http://">
+	<meta itemprop="image" content="https://the-codevillain.github.io/portfolio/assets/images/share.png">
 
     <!--Microsoft Tags-->
     <meta name="msapplication-tap-highlight" content="no">
-	<meta name="msapplication-TileColor" content="">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="application-name" content="CodeVillain의 포트폴리오들">
 	<meta name="msapplication-tooltip" content="CodeVillain의 포트폴리오들">
 	<meta name="msapplication-starturl" content="https://the-codevillain.github.io/portfolio/">
@@ -66,17 +66,32 @@
 
     <!-- Etc -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="">
+    <meta name="theme-color" content="#FFFFFF">
     <link rel="canonical" href="https://the-codevillain.github.io/portfolio/">
     <link rel="shortcut icon" href="assets/imges/favicon.ico">
-    <link rel="publisher" href="https://plus.google.com/u/0/116989943152763430078"> 
+    <link rel="publisher" href="https://plus.google.com/u/0/116989943152763430078">
 
     <!-- Manifest.json  -->
-    <link href="manifest.json" rel="manifest">
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Js Scripts -->
+    <script src="src/polyfill.min.js"></script>
+    <script src="src/particles.min.js"></script>
+    <script type="module" src="src/characters.js"></script>
+    <script type="module" src="src/scripts.js"></script>
+    <script type="module" src="src/settings.js"></script>
+    <script type="module" src="src/main.js"></script>
 </head>
 
 <body>
+    <noscript>
+        <div>
+            <h1>자바스크립트가 이 브라우저를 지원하지 않거나 꺼져있습니다!.</h1>
+            <p>포트폴리오 사이트에 방문을 원하신다면, 자바스크립트를 켜주시거나 혹은 브라우저를 변경해서 접속해주세요.</p>
+        </div>
+    </noscript>
     <p>우리 모두는 <strong><u>자신의 힘</u></strong>으로 발견한 내용을 가장 쉽게 익힌다. - 도널드 커누스</p>
+    <span class="dialog"></span>
+    <div id="screen"></div>
 </body>
-
 </html>
