--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
     <!-- Manifest.json  -->
     <link rel="manifest" href="manifest.json">
 
+    <!-- Css -->
+    <link rel="stylesheet" href="style/animate.min.css">
+    <link rel="stylesheet" href="style/csshake.min.css">
+    <link rel="stylesheet" href="style/style.css">
+
     <!-- Js Scripts -->
     <script src="src/polyfill.min.js"></script>
     <script src="src/particles.min.js"></script>
@@ -90,8 +95,13 @@
             <p>포트폴리오 사이트에 방문을 원하신다면, 자바스크립트를 켜주시거나 혹은 브라우저를 변경해서 접속해주세요.</p>
         </div>
     </noscript>
+    <!-- 걍 써놓은거 -->
     <p>우리 모두는 <strong><u>자신의 힘</u></strong>으로 발견한 내용을 가장 쉽게 익힌다. - 도널드 커누스</p>
-    <span class="dialog"></span>
+    <section class="game">
+        <div class="choice"></div>
+        <div class="dialog_talker"></div>
+        <span class="dialog"></span>
+    </section>
     <div id="screen"></div>
 </body>
 </html>
