--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
             <p>포트폴리오 사이트에 방문을 원하신다면, 자바스크립트를 켜주시거나 혹은 브라우저를 변경해서 접속해주세요.</p>
         </div>
     </noscript>
+
     <!-- 걍 써놓은거 -->
-    <p>우리 모두는 <strong><u>자신의 힘</u></strong>으로 발견한 내용을 가장 쉽게 익힌다. - 도널드 커누스</p>
+    <!--<p>우리 모두는 <strong><u>자신의 힘</u></strong>으로 발견한 내용을 가장 쉽게 익힌다. - 도널드 커누스</p>-->
+    <p> - ! - <b>절찬 공사중!!</b> - ! -</p>
     <section class="game">
-        <div class="choice"></div>
+        <div id="choice"></div>
         <div class="dialog_talker"></div>
         <span class="dialog"></span>
     </section>
