--- a/index.html
+++ b/index.html
@@ -96,9 +96,15 @@
         </div>
     </noscript>
 
-    <!-- 걍 써놓은거 -->
-    <!--<p>우리 모두는 <strong><u>자신의 힘</u></strong>으로 발견한 내용을 가장 쉽게 익힌다. - 도널드 커누스</p>-->
-    <p> - ! - <b>절찬 공사중!!</b> - ! -</p>
+    <section data-menu="loading" data-background="">
+        <div>
+            <h2>로딩중</h2>
+            <progress id="loading_progress" value="0" max="100"></progress>
+            <small>모든 리소스가 에셋이 로딩 될 때 까지 기다려주세요!</small>
+        </div>
+    </section>
+
+    <!--<p> - ! - <b>절찬 공사중!!</b> - ! -</p>-->
     <section class="game">
         <div id="choice"></div>
         <div class="dialog_talker"></div>
