--- a/index.html
+++ b/index.html
@@ -96,20 +96,24 @@
         </div>
     </noscript>
 
-    <section data-menu="loading" data-background="">
-        <div>
+    <section class="loading">
+        <div class="align-middle">
             <h2>로딩중</h2>
             <progress id="loading_progress" value="0" max="100"></progress>
-            <small>모든 리소스가 에셋이 로딩 될 때 까지 기다려주세요!</small>
+            <small>모든 에셋이 로딩 될 때 까지 기다려주세요!</small>
         </div>
     </section>
 
-    <!--<p> - ! - <b>절찬 공사중!!</b> - ! -</p>-->
-    <section class="game">
+    <section class="game" style="display: none;">
+        <ul id="bgs">
+            <!--<li><img src="assets/images/bgs/park_afternoon.png" alt="back_bg"/></li>-->
+            <!--<li><img src="assets/images/bgs/park_evening.png" alt="current_bg"/></li>-->
+        </ul>
         <div id="choice"></div>
-        <div class="dialog_talker"></div>
-        <span class="dialog"></span>
+        <div class="dialog">
+            <span class="dialog_talker"></span>
+            <p class="dialog_text"></p>
+        </div>
     </section>
-    <div id="screen"></div>
 </body>
 </html>
