Fix cant excute command bug
Signed-off-by: KimDeokwon <codevillain@naver.com>

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         </div>
     </section>
 
+    <p id="debug"></p>
     <section class="game" style="display: none;">
         <ul id="bgs">
             <!--<li><img src="assets/images/bgs/park_afternoon.png" alt="back_bg"/></li>-->
