--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <script type="module" src="src/main.js"></script>
 </head>
 
-<body onclick="">
+<body>
     <noscript>
         <div>
             <h1>자바스크립트가 이 브라우저를 지원하지 않거나 꺼져있습니다!.</h1>
@@ -104,7 +104,6 @@
         </div>
     </section>
 
-    <p id="debug"></p>
     <section class="game" style="display: none;">
         <ul id="bgs">
             <!--<li><img src="assets/images/bgs/park_afternoon.png" alt="back_bg"/></li>-->
