restruecture all code
Signed-off-by: KimDeokwon <codevillain@naver.com>

--- a/index.html
+++ b/index.html
@@ -75,16 +75,12 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Css -->
-    <link rel="stylesheet" href="style/animate.min.css">
-    <link rel="stylesheet" href="style/csshake.min.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/game.css">
 
     <!-- Js Scripts -->
     <script src="src/polyfill.min.js"></script>
     <script src="src/particles.min.js"></script>
-    <script type="module" src="src/characters.js"></script>
-    <script type="module" src="src/scripts.js"></script>
-    <script type="module" src="src/settings.js"></script>
     <script type="module" src="src/main.js"></script>
 </head>
 
@@ -109,7 +105,7 @@
             <!--<li><img src="assets/images/bgs/park_afternoon.png" alt="back_bg"/></li>-->
             <!--<li><img src="assets/images/bgs/park_evening.png" alt="current_bg"/></li>-->
         </ul>
-        <div id="choice"></div>
+        <div id="choice" class="full-width align-vertical align-middle"></div>
         <div class="dialog">
             <span class="dialog_talker"></span>
             <p class="dialog_text"></p>
