Update BG swap function
Signed-off-by: KimDeokwon <codevillain@naver.com>

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     </section>
 
     <section class="game" style="display: none;">
-        <ul id="bgs">
-            <!--<li><img src="assets/images/bgs/park_afternoon.png" alt="back_bg"/></li>-->
-            <!--<li><img src="assets/images/bgs/park_evening.png" alt="current_bg"/></li>-->
-        </ul>
+        <div id="bgs">
+            <div id="back_bg" class="ingame_bg"></div>
+            <div id="front_bg" class="ingame_bg"></div>
+        </div>
         <div id="choice" class="full-width align-vertical align-middle"></div>
         <div class="dialog">
             <span class="dialog_talker"></span>
