--- a/index.html
+++ b/index.html
@@ -3,39 +3,39 @@
 <html lang="ko" itemscope itemtype="http://schema.org/WebPage">
 <head prefix="og: http://ogp.me/ns#">
     <!-- 기본적인 것들 -->
-    <title>CodeVillain의 포트폴리오들</title>
+    <title>CodeVillain의 포트폴리오 미술관</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
-    <meta name="description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
+    <meta name="description" content="CodeVillain의 유사 고품격 포트폴리오를 소개하는 사이트입니다.">
     <meta name="keywords" content="CodeVillain, Deokwon Kim, Kim Deokwon, 김덕원">
     <meta name="author" content="CodeVillain">
 
     <!-- FaceBook -->
     <meta property="og:image" content="https://the-codevillain.github.io/portfolio/assets/images/share.png">
-	<meta property="og:description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
-	<meta property="og:site_name" content="CodeVillain의 포트폴리오들">
+	<meta property="og:description" content="CodeVillain의 유사 고품격 포트폴리오를 소개하는 사이트입니다.">
+	<meta property="og:site_name" content="CodeVillain의 포트폴리오 미술관">
 	<meta property="og:url" content="https://the-codevillain.github.io/portfolio/">
-	<meta property="og:title" content="CodeVillain의 포트폴리오들">
+	<meta property="og:title" content="CodeVillain의 포트폴리오 미술관">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:domain" content="https://the-codevillain.github.io/portfolio/">
     <meta name="twitter:site" content="@CodeVillain">
     <meta name="twitter:creator" content="@CodeVillain">
-	<meta name="twitter:title" content="CodeVillain의 포트폴리오들">
-	<meta name="twitter:description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
+	<meta name="twitter:title" content="CodeVillain의 포트폴리오 미술관">
+	<meta name="twitter:description" content="CodeVillain의 유사 고품격 포트폴리오를 소개하는 사이트입니다.">
 	<meta name="twitter:image:src" content="https://the-codevillain.github.io/portfolio/assets/images/share.png">
 
     <!-- Google -->
-	<meta itemprop="name" content="CodeVillain의 포트폴리오들">
-	<meta itemprop="description" content="CodeVillain의 포트폴리오를 소개하는 사이트입니다.">
+	<meta itemprop="name" content="CodeVillain의 포트폴리오 미술관">
+	<meta itemprop="description" content="CodeVillain의 유사 고품격 포트폴리오를 소개하는 사이트입니다.">
 	<meta itemprop="image" content="https://the-codevillain.github.io/portfolio/assets/images/share.png">
 
     <!--Microsoft Tags-->
     <meta name="msapplication-tap-highlight" content="no">
 	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="application-name" content="CodeVillain의 포트폴리오들">
-	<meta name="msapplication-tooltip" content="CodeVillain의 포트폴리오들">
+	<meta name="application-name" content="CodeVillain의 포트폴리오 미술괸">
+	<meta name="msapplication-tooltip" content="CodeVillain의 포트폴리오 미술관">
 	<meta name="msapplication-starturl" content="https://the-codevillain.github.io/portfolio/">
 	<meta name="msapplication-square70x70logo" content="assets/imges/icons/icon_70x70.png">
 	<meta name="msapplication-square150x150logo" content="assets/imges/icons/icon_150x150.png">
@@ -71,9 +71,6 @@
     <link rel="shortcut icon" href="assets/imges/favicon.ico">
     <link rel="publisher" href="https://plus.google.com/u/0/116989943152763430078">
 
-    <!-- Manifest.json  -->
-    <link rel="manifest" href="manifest.json">
-
     <!-- Css -->
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/game.css">
@@ -92,6 +89,9 @@
         </div>
     </noscript>
 
+    <!--크롬 Auto play policy 회피용-->
+    <iframe src="assets/sounds/silence.mp3" allow="autoplay" id="audio" style="display: none;"></iframe>
+
     <section class="loading">
         <div class="align-middle">
             <h2>로딩중</h2>
@@ -106,6 +106,7 @@
             <div id="front_bg" class="ingame_bg"></div>
         </div>
         <div id="choice" class="full-width align-vertical align-middle"></div>
+        <div id="monologue" class="full-width full-height"></div>
         <div class="dialog">
             <span class="dialog_talker"></span>
             <p class="dialog_text"></p>
