dialog 컴포넌트 구현
Signed-off-by: Kim Deokwon <codevillain@naver.com>

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,8 @@
     <link rel="canonical" href="https://the-Bang Chundeok.github.io/portfolio/">
     <link rel="shortcut icon" href="assets/imges/favicon.ico">
     <link rel="publisher" href="https://plus.google.com/u/0/116989943152763430078">
+
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
