--- a/src/index.html
+++ b/src/index.html
@@ -10,32 +10,32 @@
     <meta name="author" content="Bang Chundeok">
 
     <!-- FaceBook -->
-    <meta property="og:image" content="https://the-Bang Chundeok.github.io/portfolio/assets/images/share.png">
+    <meta property="og:image" content="https://Bang Chundeok.github.io/portfolio/assets/images/share.png">
 	<meta property="og:description" content="Bang Chundeok의 유사 고품격 포트폴리오를 소개하는 사이트입니다.">
 	<meta property="og:site_name" content="Bang Chundeok의 포트폴리오 미술관">
-	<meta property="og:url" content="https://the-Bang Chundeok.github.io/portfolio/">
+	<meta property="og:url" content="https://BangChundeok.github.io/portfolio/">
 	<meta property="og:title" content="Bang Chundeok의 포트폴리오 미술관">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:domain" content="https://the-Bang Chundeok.github.io/portfolio/">
+	<meta name="twitter:domain" content="https://BangChundeok.github.io/portfolio/">
     <meta name="twitter:site" content="@Bang Chundeok">
     <meta name="twitter:creator" content="@Bang Chundeok">
 	<meta name="twitter:title" content="Bang Chundeok의 포트폴리오 미술관">
 	<meta name="twitter:description" content="Bang Chundeok의 유사 고품격 포트폴리오를 소개하는 사이트입니다.">
-	<meta name="twitter:image:src" content="https://the-Bang Chundeok.github.io/portfolio/assets/images/share.png">
+	<meta name="twitter:image:src" content="https://BangChundeok.github.io/portfolio/assets/images/share.png">
 
     <!-- Google -->
 	<meta itemprop="name" content="Bang Chundeok의 포트폴리오 미술관">
 	<meta itemprop="description" content="Bang Chundeok의 유사 고품격 포트폴리오를 소개하는 사이트입니다.">
-	<meta itemprop="image" content="https://the-Bang Chundeok.github.io/portfolio/assets/images/share.png">
+	<meta itemprop="image" content="https://BangChundeok.github.io/portfolio/assets/images/share.png">
 
     <!--Microsoft Tags-->
     <meta name="msapplication-tap-highlight" content="no">
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="application-name" content="Bang Chundeok의 포트폴리오 미술괸">
 	<meta name="msapplication-tooltip" content="Bang Chundeok의 포트폴리오 미술관">
-	<meta name="msapplication-starturl" content="https://the-Bang Chundeok.github.io/portfolio/">
+	<meta name="msapplication-starturl" content="https://BangChundeok.github.io/portfolio/">
 	<meta name="msapplication-square70x70logo" content="assets/imges/icons/icon_70x70.png">
 	<meta name="msapplication-square150x150logo" content="assets/imges/icons/icon_150x150.png">
 	<meta name="msapplication-wide310x150logo" content="assets/imges/icons/icon_310x150.png">
@@ -66,7 +66,7 @@
     <!-- Etc -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#FFFFFF">
-    <link rel="canonical" href="https://the-Bang Chundeok.github.io/portfolio/">
+    <link rel="canonical" href="https://Bang Chundeok.github.io/portfolio/">
     <link rel="shortcut icon" href="assets/imges/favicon.ico">
     <link rel="publisher" href="https://plus.google.com/u/0/116989943152763430078">
 
@@ -85,7 +85,7 @@
     </noscript>
 
     <!--크롬 Auto play policy 회피용-->
-    <iframe src="assets/sounds/silence.mp3" allow="autoplay" id="audio" style="display: none;"></iframe>
+    <iframe allow="autoplay" id="audio" style="display: none;"></iframe>
     <div id="app"></div>
     <script src="dist/app.js"></script>
 </body>
