fix: 사라진 open graph 이미지 다시 추가
Signed-off-by: Deok-Won Kim (Chun-Sik Kim) <public.chunsik@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 	<head>
 		<!-- 기본적인 것들 -->
-		<title>Bang Chundeok의 포트폴리오 미술관</title>
+		<title>김춘식의 포트폴리오 미술관</title>
 		<meta charset="UTF-8" />
 		<meta
 			name="viewport"
@@ -10,70 +10,70 @@
 		/>
 		<meta
 			name="description"
-			content="Bang Chundeok의 유사 고품격 포트폴리오를 소개하는 사이트입니다."
+			content="김춘식의 유사 고품격 포트폴리오를 소개하는 사이트입니다."
 		/>
 		<meta
 			name="keywords"
-			content="Bang Chundeok, Deokwon Kim, Kim Deokwon, 김덕원"
+			content="김춘식, Deokwon Kim, 김덕원"
 		/>
-		<meta name="author" content="Bang Chundeok" />
+		<meta name="author" content="김춘식" />
 
 		<!-- FaceBook -->
 		<meta
 			property="og:image"
-			content="https://Bang Chundeok.github.io/portfolio/assets/images/share.png"
+			content="https://kimchunsick.me/portfolio/assets/images/share.png"
 		/>
 		<meta
 			property="og:description"
-			content="Bang Chundeok의 유사 고품격 포트폴리오를 소개하는 사이트입니다."
+			content="김춘식의 유사 고품격 포트폴리오를 소개하는 사이트입니다."
 		/>
-		<meta property="og:site_name" content="Bang Chundeok의 포트폴리오 미술관" />
+		<meta property="og:site_name" content="김춘식의 포트폴리오 미술관" />
 		<meta
 			property="og:url"
-			content="https://BangChundeok.github.io/portfolio/"
+			content="https://kimchunsick.me/portfolio/"
 		/>
-		<meta property="og:title" content="Bang Chundeok의 포트폴리오 미술관" />
+		<meta property="og:title" content="김춘식의 포트폴리오 미술관" />
 
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta
 			name="twitter:domain"
-			content="https://BangChundeok.github.io/portfolio/"
+			content="https://kimchunsick.me/portfolio/"
 		/>
-		<meta name="twitter:site" content="@Bang Chundeok" />
-		<meta name="twitter:creator" content="@Bang Chundeok" />
-		<meta name="twitter:title" content="Bang Chundeok의 포트폴리오 미술관" />
+		<meta name="twitter:site" content="@김춘식" />
+		<meta name="twitter:creator" content="@김춘식" />
+		<meta name="twitter:title" content="김춘식의 포트폴리오 미술관" />
 		<meta
 			name="twitter:description"
-			content="Bang Chundeok의 유사 고품격 포트폴리오를 소개하는 사이트입니다."
+			content="김춘식의 유사 고품격 포트폴리오를 소개하는 사이트입니다."
 		/>
 		<meta
 			name="twitter:image:src"
-			content="https://BangChundeok.github.io/portfolio/assets/images/share.png"
+			content="https://kimchunsick.me/portfolio/assets/images/share.png"
 		/>
 
 		<!-- Google -->
-		<meta itemprop="name" content="Bang Chundeok의 포트폴리오 미술관" />
+		<meta itemprop="name" content="김춘식의 포트폴리오 미술관" />
 		<meta
 			itemprop="description"
-			content="Bang Chundeok의 유사 고품격 포트폴리오를 소개하는 사이트입니다."
+			content="김춘식의 유사 고품격 포트폴리오를 소개하는 사이트입니다."
 		/>
 		<meta
 			itemprop="image"
-			content="https://BangChundeok.github.io/portfolio/assets/images/share.png"
+			content="https://kimchunsick.me/portfolio/assets/images/share.png"
 		/>
 
 		<!--Microsoft Tags-->
 		<meta name="msapplication-tap-highlight" content="no" />
 		<meta name="msapplication-TileColor" content="#FFFFFF" />
-		<meta name="application-name" content="Bang Chundeok의 포트폴리오 미술괸" />
+		<meta name="application-name" content="김춘식의 포트폴리오 미술괸" />
 		<meta
 			name="msapplication-tooltip"
-			content="Bang Chundeok의 포트폴리오 미술관"
+			content="김춘식의 포트폴리오 미술관"
 		/>
 		<meta
 			name="msapplication-starturl"
-			content="https://BangChundeok.github.io/portfolio/"
+			content="https://kimchunsick.me/portfolio/"
 		/>
 		<meta
 			name="msapplication-square70x70logo"
@@ -153,7 +153,7 @@
 		<!-- Etc -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="theme-color" content="#FFFFFF" />
-		<link rel="canonical" href="https://Bang Chundeok.github.io/portfolio/" />
+		<link rel="canonical" href="https://김춘식.github.io/portfolio/" />
 		<link rel="shortcut icon" href="assets/imges/favicon.ico" />
 		<link
 			rel="publisher"
